@@ -30,6 +30,8 @@ TODO: provide something like % for easy access for parse_keysym
 TODO: description into --help output?
 TODO: rxvt -help => (see rxvt-XXX(1))?
 
+	- fix redraw bug that may occur if the character in the cursor cell has
+	  width > 1 (reported by Tiago Resende).
 	- add shade operator in background perl extension
 	- fix regression that causes artifacts on scrolling if
 	  saveLines is 0 and the window is resized (reported by Bert
